syntax = "proto3";
package peers;

message Peer {
  uint32 ID = 1;
  string NetAddr = 2;
  string PubKeyHex = 3;
  int64 used = 4;
}
